--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,10 +2,10 @@
 				<h1 id="logo"><a href="/">The People's Project <span>Dumfries</span></a></h1>
 				<nav id="nav">
 					<ul>
-            <li><a href="{{ site.baseurl }}">Home</a></li>
-            <li><a href="/blog.html">Blog</a></li>
-            <li><a href="{{ site.baseurl }}/#about">About Us</a></li>
-						<li><a href="/contact" class="button special">Contact</a></li>
+            <li><a href="{{ site.url }}">Home</a></li>
+            <li><a href="{{ site.url }}/blog.html">Blog</a></li>
+            <li><a href="{{ site.url }}/#about">About Us</a></li>
+						<li><a href="{{ site.url }}/contact" class="button special">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
