--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,10 +19,10 @@
     <script src="/js/skel-layers.min.js"></script>
     <script src="/js/init.js"></script>
     
-    <link rel="stylesheet" href="/{{ site.url }}/css/skel.css" />
-    <link rel="stylesheet" href="/{{ site.url }}/css/style.css" />
-    <link rel="stylesheet" href="/{{ site.url }}/css/style-wide.css" />
-    <link rel="stylesheet" href="/{{ site.url }}/css/style-noscript.css" />
+    <link rel="stylesheet" href="/{{ site.baseurl }}/css/skel.css" />
+    <link rel="stylesheet" href="/{{ site.baseurl }}/css/style.css" />
+    <link rel="stylesheet" href="/{{ site.baseurl }}/css/style-wide.css" />
+    <link rel="stylesheet" href="/{{ site.baseurl }}/css/style-noscript.css" />
 
     <!--[if lte IE 8]><link rel="stylesheet" href="/peoples-project/css/ie/v8.css" /><![endif]-->
     <!--[if lte IE 9]><link rel="stylesheet" href="/peoples-project/css/ie/v9.css" /><![endif]-->
