--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header id="header">
-				<h1 id="logo"><a href="/">The People's Project <span>Dumfries</span></a></h1>
+				<h1 id="logo"><a href="{{ site.baseurl }}">The People's Project <span>Dumfries</span></a></h1>
 				<nav id="nav">
 					<ul>
             <li><a href="{{ site.baseurl }}">Home</a></li>
