change path for js in head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,13 +11,13 @@
     <meta name="description" content="{{ site.description }}">
     <meta name="keywords" content="" />
     <!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-    <script src="/js/jquery.min.js"></script>
-    <script src="/js/jquery.dropotron.min.js"></script>
-    <script src="/js/jquery.scrolly.min.js"></script>
-    <script src="/js/jquery.scrollgress.min.js"></script>
-    <script src="/js/skel.min.js"></script>
-    <script src="/js/skel-layers.min.js"></script>
-    <script src="/js/init.js"></script>
+    <script src="/peoples-project/js/jquery.min.js"></script>
+    <script src="/peoples-project/js/jquery.dropotron.min.js"></script>
+    <script src="/peoples-project/js/jquery.scrolly.min.js"></script>
+    <script src="/peoples-project/js/jquery.scrollgress.min.js"></script>
+    <script src="/peoples-project/js/skel.min.js"></script>
+    <script src="/peoples-project/js/skel-layers.min.js"></script>
+    <script src="/peoples-project/js/init.js"></script>
     
     <link rel="stylesheet" href="/peoples-project/css/skel.css" />
     <link rel="stylesheet" href="/peoples-project/css/style.css" />
