--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,9 +14,9 @@ layout: default
     
     <footer>
         {% if page.previous %}
-        <a href="{{ page.previous.url }}" class="post-prev">&larr; Previous post</a> {% endif %}
+        <a href="{{ site.baseurl}}{{ page.previous.url }}" class="post-prev">&larr; Previous post</a> {% endif %}
         {% if page.next %}
-        <a href="{{ page.next.url }}" class="post-next">Next post &rarr;</a> {% endif %}
+        <a href="{{ site.baseurl}}{{ page.next.url }}" class="post-next">Next post &rarr;</a> {% endif %}
     </footer>
 </article>
 
