--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
             <li><a href="{{ site.baseurl }}">Home</a></li>
             <li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
             <li><a href="{{ site.baseurl }}/#about">About Us</a></li>
-						<li><a href="{{ site.baseurl }}/contact" class="button special">Contact</a></li>
+						<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
