change path for js in head

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -15,7 +15,7 @@
         <p>Aliquam eu elit eget arcu <br>comteger ut fermtum lorem<br> Lorem ipsum dolor sit amet</p>
         <footer>
             <ul class="buttons vertical">
-                <li><a href="/blog" class="button fit scrolly">Check out our blog!</a></li>
+                <li><a href="{{ site.baseurl }}/blog" class="button fit scrolly">Check out our blog!</a></li>
             </ul>
         </footer>
 
