change path for css in js init

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <header id="header">
-				<h1 id="logo"><a href="{{ site.baseurl }}">The People's Project <span>Dumfries</span></a></h1>
+				<h1 id="logo"><a href="{{ site.baseurl }}/">The People's Project <span>Dumfries</span></a></h1>
 				<nav id="nav">
 					<ul>
-            <li><a href="{{ site.baseurl }}">Home</a></li>
+            <li><a href="{{ site.baseurl }}/">Home</a></li>
             <li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
             <li><a href="{{ site.baseurl }}/#about">About Us</a></li>
 						<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
