fix file extension i header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
 				<nav id="nav">
 					<ul>
             <li><a href="{{ site.baseurl }}/">Home</a></li>
-            <li><a href="{{ site.baseurl }}/blog.html">Blog</a></li>
+            <li><a href="{{ site.baseurl }}/blog">Blog</a></li>
             <li><a href="{{ site.baseurl }}/#about">About Us</a></li>
 						<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
 					</ul>
